k8s/prd/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: users
  labels:
    name: users
